[package]
name = "tensorflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
rand_isaac = "0.3.0"
ndarray_einsum_beta = "0.7.0"
rayon = "1.5.1"

[dev-dependencies]
image = "0.24.1"
