[package]
name = "tensorflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

serde = ["ndarray/serde", "dep:serde"]

[dependencies]
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
rand_isaac = "0.3.0"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc", "std", "rc"] }
ndarray_einsum_beta = "0.7.0"
rayon = "1.5.1"

[dev-dependencies]
image = "0.24.1"
bincode = "1.3"
